--- a/.env.example
+++ b/.env.example
@@ -1,17 +1,17 @@
-APP_NAME=Laravel
+APP_NAME='Code Colleng'
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:EdyfH2XBnurSIvz+102ve/l/4/gy8jWlPLXDc8rEd14=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://localhost:8000
 
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=localhost
 DB_PORT=3306
-DB_DATABASE=homestead
-DB_USERNAME=homestead
-DB_PASSWORD=secret
+DB_DATABASE=code_challenge
+DB_USERNAME=root
+DB_PASSWORD=dns3223!@
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -24,11 +24,12 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_DRIVER=smtp
-MAIL_HOST=smtp.mailtrap.io
-MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
+MAIL_HOST=smtp.gmail.com
+MAIL_PORT=587
+MAIL_USERNAME=codechalleng@gmail.com
+MAIL_PASSWORD=Cod3223Cod
+MAIL_ENCRYPTION=tls
+MAIL_FROM_NAME='Code Colleng'
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
