--- a/example.env
+++ b/example.env
@@ -1,4 +1,4 @@
-APP_NAME='Code Colleng'
+APP_NAME='Code Challenge'
 APP_ENV=local
 APP_KEY=base64:EdyfH2XBnurSIvz+102ve/l/4/gy8jWlPLXDc8rEd14=
 APP_DEBUG=true
@@ -29,7 +29,7 @@ MAIL_PORT=587
 MAIL_USERNAME=codechalleng@gmail.com
 MAIL_PASSWORD=Cod3223Cod
 MAIL_ENCRYPTION=tls
-MAIL_FROM_NAME='Code Colleng'
+MAIL_FROM_NAME='Code Challenge'
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
